--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "mantine-data-grid": "^0.0.17",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.18.10/xlsx-0.18.10.tgz"
   },
