--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,30 @@
 version: "3.8"
 services:
-  api:
+  123str_planner_api:
     build: ./api
+    container_name: 123str_planner_api
     ports:
       - "8000:8000"
     depends_on:
-      - mongodb
+      - 123str_planner_mongodb
     networks:
       - 123str_planner
 
-  frontend:
+  123str_planner_frontend:
     build: ./frontend
+    container_name: 123str_planner_frontend
     stdin_open: true
     ports:
       - "5173:5173"
     networks:
       - 123str_planner
 
-  mongodb:
+  123str_planner_mongodb:
     image: mongo
+    container_name: 123str_planner_mongodb
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "27017:27017"
     networks:
