--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "main": "app/index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "electron:dev": "concurrently -k \"vite\" \"cross-env IS_DEV=true electron-forge start\"",
@@ -26,7 +26,7 @@
     "@mantine/hooks": "^5.2.5",
     "@mantine/notifications": "^5.4.1",
     "@tabler/icons": "^1.92.0",
-    "dayjs": "^1.11.6",
+    "dayjs": "^1.11.5",
     "electron-squirrel-startup": "^1.0.0",
     "mantine-data-grid": "^0.0.17",
     "react": "^18.2.0",
