--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
       - 123str_planner
 
   123str_planner_mongodb:
-    image: mongo
+    image: mongo:4.4.18
     container_name: 123str_planner_mongodb
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
