--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "main": "app/index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "electron:dev": "concurrently -k \"vite\" \"cross-env IS_DEV=true electron-forge start\"",
