--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,9 +30,9 @@
     "electron-squirrel-startup": "^1.0.0",
     "mantine-data-grid": "^0.0.17",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.18.10/xlsx-0.18.10.tgz"
   },
