--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,14 +21,37 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
-    "@mantine/core": "^5.2.5",
+    "@mantine/core": "^5.10.2",
     "@mantine/dates": "^5.2.5",
-    "@mantine/hooks": "^5.2.5",
+    "@mantine/hooks": "^5.10.2",
     "@mantine/notifications": "^5.4.1",
-    "@tabler/icons": "^1.92.0",
+    "@mantine/tiptap": "^5.10.2",
+    "@tabler/icons": "1.119.0",
+    "@tiptap/core": "^2.0.0-beta.209",
+    "@tiptap/extension-color": "^2.0.0-beta.209",
+    "@tiptap/extension-highlight": "^2.0.0-beta.209",
+    "@tiptap/extension-link": "^2.0.0-beta.209",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.209",
+    "@tiptap/extension-subscript": "^2.0.0-beta.209",
+    "@tiptap/extension-superscript": "^2.0.0-beta.209",
+    "@tiptap/extension-text-align": "^2.0.0-beta.209",
+    "@tiptap/extension-text-style": "^2.0.0-beta.209",
+    "@tiptap/extension-underline": "^2.0.0-beta.209",
+    "@tiptap/react": "^2.0.0-beta.209",
+    "@tiptap/starter-kit": "^2.0.0-beta.209",
     "dayjs": "^1.11.5",
     "electron-squirrel-startup": "^1.0.0",
     "mantine-data-grid": "^0.0.17",
+    "prosemirror-commands": "^1.5.0",
+    "prosemirror-dropcursor": "^1.6.1",
+    "prosemirror-gapcursor": "^1.3.1",
+    "prosemirror-history": "^1.3.0",
+    "prosemirror-keymap": "^1.2.0",
+    "prosemirror-model": "^1.19.0",
+    "prosemirror-schema-list": "^1.2.2",
+    "prosemirror-state": "^1.4.2",
+    "prosemirror-transform": "^1.7.1",
+    "prosemirror-view": "^1.30.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
