--- a/api/package.json
+++ b/api/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/server.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\""
+    "dev": "concurrently -n \"BUILD,API\" -c \"bgBlue.bold,bgGreen.bold\" \"npx tsc --watch\" \"nodemon -q dist/server.js\" "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "4.1.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.8.0"
