--- a/api/package.json
+++ b/api/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "4.1.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.8.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.3",
     "concurrently": "^7.4.0",
