--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,4 @@
 {
-  
   "name": "123structure-planner",
   "description": "Planner module for 123 Structure company",
   "author": {
@@ -40,6 +39,7 @@
     "@tiptap/extension-underline": "^2.0.0-beta.209",
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
+    "@types/react-lottie": "^1.2.6",
     "dayjs": "^1.11.5",
     "electron-squirrel-startup": "^1.0.0",
     "mantine-data-grid": "^0.0.17",
@@ -58,6 +58,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.3",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.18.10/xlsx-0.18.10.tgz"
   },
   "devDependencies": {
