--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,14 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
-    "@mantine/core": "^5.10.2",
-    "@mantine/dates": "^5.2.5",
-    "@mantine/hooks": "^5.10.2",
-    "@mantine/notifications": "^5.4.1",
-    "@mantine/tiptap": "^5.10.2",
+    "@mantine/core": "^6.0.0",
+    "@mantine/dates": "^6.0.0",
+    "@mantine/hooks": "^6.0.0",
+    "@mantine/notifications": "^6.0.0",
+    "@mantine/spotlight": "^6.0.0",
+    "@mantine/tiptap": "^6.0.0",
     "@tabler/icons": "1.119.0",
+    "@tabler/icons-react": "^2.7.0",
     "@tiptap/core": "^2.0.0-beta.209",
     "@tiptap/extension-color": "^2.0.0-beta.209",
     "@tiptap/extension-highlight": "^2.0.0-beta.209",
