--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/validator": "^13.7.14",
     "bcrypt": "^5.1.0",
     "chalk": "4.1.2",
@@ -20,6 +21,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.0",
     "npm": "^9.6.2",
     "validator": "^13.9.0"
