✨ Allow administrators to edit all clients + Add navigation buttons on small screens

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,4 +1,5 @@
 PORT=8000 #Default PORT is 8000
 MONGODB_URI = MONGODB_URI
-FRONTEND_URL = FRONTEND_URL
+FRONTEND_URL_LOCAL = FRONTEND_URL_LOCAL
+FRONTEND_URL_PUBLIC = FRONTEND_URL_PUBLIC
 JWT_SECRET  = JWT_SECRET
