--- a/docs/blog/authors.yml
+++ b/docs/blog/authors.yml
@@ -1,17 +1,5 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
-
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+blechat:
+  name: Baptiste LECHAT
+  title: Dessinateur / Développeur
+  url: https://www.linkedin.com/in/baptistelechat/
+  image_url: https://media.licdn.com/dms/image/C4E03AQHZ7-tcEo3_Bg/profile-displayphoto-shrink_800_800/0/1652099076340?e=2147483647&v=beta&t=K5wG-2HDodL-jOh6p0-0Ugx5tkRDF8cYEGEGeyuY8h8
